--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -1,7 +1,7 @@
 # Adds namespace to all resources.
 namespace: fabric-operator-system
 
-namePrefix: osdk-
+namePrefix: fabric-operator-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
@@ -11,7 +11,7 @@ patchesStrategicMerge:
 - manager_image.yaml
 - debug_logs_patch.yaml
 - ../default/manager_auth_proxy_patch.yaml
-- pull_policy/Always.yaml
+- pull_policy/Never.yaml
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
