--- a/molecule/kind/create.yml
+++ b/molecule/kind/create.yml
@@ -4,10 +4,16 @@
   connection: local
   gather_facts: false
   tasks:
-    - name: Use the tools script to setup k8s
-      command: "{{ project_dir }}/tools/nginxk8s.sh"
+  - name: Use the tools script to setup k8s
+    command: "{{ project_dir }}/tools/nginxk8s.sh"
 
-    - name: Set pull policy
-      command: '{{ kustomize }} edit add patch pull_policy/{{ operator_pull_policy }}.yaml'
-      args:
-        chdir: '{{ config_dir }}/testing'
+  - name: Set pull policy
+    command: '{{ kustomize }} edit {{ item.action }} patch pull_policy/{{ item.policy }}.yaml'
+    args:
+      chdir: '{{ config_dir }}/testing'
+    with_items:
+    - { 'action': 'remove', 'policy': 'Always' }
+    - { 'action': 'remove', 'policy': 'IfNotPresent' }
+    - { 'action': 'remove', 'policy': 'Never' }
+    - { 'action': 'remove', 'policy': '{{ operator_pull_policy }}' }
+
