--- a/utilities/launcher/bin/build
+++ b/utilities/launcher/bin/build
@@ -1,5 +1,6 @@
 #! /bin/bash
 
+SCRIPTPATH="$( cd -- "$(dirname "$0")" >/dev/null 2>&1 ; pwd -P )"
 CHAINCODE_SOURCE_DIR=$1
 CHAINCODE_METADATA_DIR=$2
 BUILD_OUTPUT_DIR=$3
@@ -7,4 +8,4 @@ BUILD_OUTPUT_DIR=$3
 ansible-playbook -e "CHAINCODE_SOURCE_DIR=$CHAINCODE_SOURCE_DIR" \
   -e "CHAINCODE_METADATA_DIR=$CHAINCODE_METADATA_DIR" \
   -e "BUILD_OUTPUT_DIR=$BUILD_OUTPUT_DIR" \
-  -e "ansible_python_interpreter=/usr/bin/python3.8" build.yml
+  -e "ansible_python_interpreter=/usr/bin/python3.8" ${SCRIPTPATH}/build.yml
