--- a/roles/agent/ops/cccommit/commitcc.yml
+++ b/roles/agent/ops/cccommit/commitcc.yml
@@ -21,7 +21,7 @@
     --name {{ ccName }} --version {{ ccVersion }} --sequence {{ ccSequence }} \
     --tls {{ init|ternary('--init-required', '') }} \
     -o {{ ordererid.endpoint }} \
-    --cafile {{ agentworkdir }}/{{ ordererNode }}/tls/ca.crt
+    --cafile {{ agentworkdir }}/{{ ordererNode }}/tls/ca.crt --connTimeout 120s
   args:
     chdir: '{{ agentworkdir }}'
     executable: /bin/bash
